@@ -1,6 +1,8 @@
 package kr.co.wikibook.greengram2.config.model;
 
+import kr.co.wikibook.greengram2.config.enumcode.model.EnumUserRole;
 import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -9,22 +11,24 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 
+@Slf4j
 @Getter
 public class UserPrincipal implements UserDetails {
     private final long memberId;
     private final Collection<? extends GrantedAuthority> authorities;
 
-    public UserPrincipal(long memberId, List<String> roles) {
+    public UserPrincipal(long memberId, List<EnumUserRole> roles) {
         this.memberId = memberId;
         List<SimpleGrantedAuthority> list = new ArrayList<>();
-        for(String role : roles){
-            list.add(new SimpleGrantedAuthority(role));
+        for(EnumUserRole role : roles){
+            String roleName = String.format("ROLE_%s", role.name());
+            log.info("roleName: {}", roleName);
+            list.add(new SimpleGrantedAuthority(roleName));
         }
         this.authorities = list;
 
-        //this.authorities = roles.stream().map(role -> new SimpleGrantedAuthority(role)).collect(Collectors.toList());
+        //this.authorities = roles.stream().map(role -> new SimpleGrantedAuthority(String.format("ROLE_%s", role.name()))).toList();
     }
-
 
     @Override
     public String getPassword() { return null; }
